FIX: fix the bug in alignment

--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -686,7 +686,7 @@ img {
 .services__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
-  font-weight: var(--font-medium);
+  /* font-weight: var(--font-medium); */
 }
 
 .services__button {
